[gd_scene load_steps=12 format=2]

[ext_resource path="res://scenes/song_select/jacket_image.gd" type="Script" id=1]
[ext_resource path="res://fonts/m_plus_1p_regular_72.tres" type="DynamicFont" id=2]
[ext_resource path="res://textures/gameplay-bg.jpg" type="Texture" id=3]
[ext_resource path="res://scenes/song_select/difficulty_select.tscn" type="PackedScene" id=4]
[ext_resource path="res://scenes/song_select/song_select.gd" type="Script" id=5]
[ext_resource path="res://scenes/ui/player_info.tscn" type="PackedScene" id=6]
[ext_resource path="res://scenes/song_select/song_select_scroll.gd" type="Script" id=7]
[ext_resource path="res://themes/theme1.tres" type="Theme" id=8]
[ext_resource path="res://songs/beta1/neutralizeptbmix/jacket.png" type="Texture" id=9]
[ext_resource path="res://textures/ui/song_border_selected.png" type="Texture" id=11]

[sub_resource type="StyleBoxFlat" id=1]
bg_color = Color( 1, 1, 1, 1 )
border_width_left = 8
border_width_top = 8
border_width_right = 8
border_width_bottom = 8

[node name="SongSelect" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
mouse_filter = 1
script = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer" type="MarginContainer" parent="."]
margin_right = 215.0
margin_bottom = 84.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BackButton" type="Button" parent="MarginContainer"]
margin_left = 16.0
margin_top = 16.0
margin_right = 215.0
margin_bottom = 88.0
size_flags_horizontal = 3
size_flags_vertical = 3
theme = ExtResource( 8 )
text = "<- Back"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerInfo" parent="." instance=ExtResource( 6 )]
anchor_left = 0.5
anchor_right = 0.5
anchor_bottom = 0.0
margin_left = -1280.0
margin_right = 1280.0
margin_bottom = 759.0
size_flags_horizontal = 0

[node name="Gameplay_bg" type="TextureRect" parent="."]
self_modulate = Color( 0.392157, 0.392157, 0.392157, 1 )
show_behind_parent = true
anchor_right = 1.0
anchor_bottom = 1.0
texture = ExtResource( 3 )
expand = true
stretch_mode = 7
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = -864.0
margin_top = 144.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PackSelectButton" type="TextureButton" parent="VBoxContainer"]
self_modulate = Color( 0.807843, 0.807843, 0.807843, 1 )
margin_right = 648.0
margin_bottom = 130.0
grow_horizontal = 0
rect_min_size = Vector2( 648, 130 )
size_flags_horizontal = 0
texture_normal = ExtResource( 11 )
expand = true
stretch_mode = 5

[node name="MarginContainer" type="MarginContainer" parent="VBoxContainer/PackSelectButton"]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="VBoxContainer/PackSelectButton/MarginContainer"]
margin_top = 14.0
margin_right = 648.0
margin_bottom = 116.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = ExtResource( 2 )
text = "Main Story 1"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongSelectScroll" type="ScrollContainer" parent="VBoxContainer"]
margin_top = 130.0
margin_right = 864.0
margin_bottom = 936.0
grow_horizontal = 0
mouse_filter = 1
size_flags_horizontal = 3
size_flags_vertical = 3
follow_focus = true
scroll_horizontal_enabled = false
scroll_deadzone = 16
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="SongListContainer" type="VBoxContainer" parent="VBoxContainer/SongSelectScroll"]
margin_right = 864.0
margin_bottom = 806.0
grow_horizontal = 0
size_flags_horizontal = 3
size_flags_vertical = 3
custom_constants/separation = 0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="MarginContainer2" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 55.0
margin_top = -386.0
margin_right = 698.0
margin_bottom = 114.0
mouse_filter = 1
size_flags_horizontal = 3
custom_constants/margin_right = 8
custom_constants/margin_top = 8
custom_constants/margin_left = 8
custom_constants/margin_bottom = 8
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer2"]
margin_left = 8.0
margin_top = 8.0
margin_right = 635.0
margin_bottom = 492.0

[node name="PanelContainer" type="PanelContainer" parent="MarginContainer2/VBoxContainer"]
margin_left = 105.0
margin_right = 521.0
margin_bottom = 416.0
size_flags_horizontal = 4
custom_styles/panel = SubResource( 1 )

[node name="JacketImage" type="TextureRect" parent="MarginContainer2/VBoxContainer/PanelContainer"]
margin_left = 8.0
margin_top = 8.0
margin_right = 408.0
margin_bottom = 408.0
rect_min_size = Vector2( 400, 400 )
mouse_filter = 2
texture = ExtResource( 9 )
expand = true
stretch_mode = 6
script = ExtResource( 1 )

[node name="HBoxContainer" type="HBoxContainer" parent="MarginContainer2/VBoxContainer"]
margin_top = 420.0
margin_right = 627.0
margin_bottom = 484.0
custom_constants/separation = 6
alignment = 1

[node name="DiffAlpha" parent="MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 48.0
margin_right = 176.0
margin_bottom = 64.0
size_flags_vertical = 1

[node name="DiffBeta" parent="MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 182.0
margin_right = 310.0
margin_bottom = 64.0
size_flags_vertical = 1
difficulty = 1

[node name="DiffGamma" parent="MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 316.0
margin_right = 444.0
margin_bottom = 64.0
size_flags_vertical = 1
difficulty = 2

[node name="DiffDelta" parent="MarginContainer2/VBoxContainer/HBoxContainer" instance=ExtResource( 4 )]
margin_left = 450.0
margin_right = 578.0
margin_bottom = 64.0
size_flags_vertical = 1
difficulty = 3

[node name="MarginContainer3" type="MarginContainer" parent="."]
anchor_top = 0.5
anchor_bottom = 0.5
margin_left = 80.0
margin_top = 144.0
margin_right = 678.0
margin_bottom = 481.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer3"]
margin_right = 598.0
margin_bottom = 337.0

[node name="ColorRect" type="ColorRect" parent="MarginContainer3/VBoxContainer"]
margin_right = 598.0
margin_bottom = 6.0
rect_min_size = Vector2( 0, 6 )

[node name="Control" type="Control" parent="MarginContainer3/VBoxContainer"]
margin_top = 10.0
margin_right = 598.0
margin_bottom = 327.0
size_flags_vertical = 3

[node name="ColorRect2" type="ColorRect" parent="MarginContainer3/VBoxContainer"]
margin_top = 331.0
margin_right = 598.0
margin_bottom = 337.0
rect_min_size = Vector2( 0, 6 )

[node name="MarginContainer4" type="MarginContainer" parent="."]
anchor_left = 1.0
anchor_right = 1.0
margin_left = -240.0
margin_bottom = 104.0
custom_constants/margin_right = 16
custom_constants/margin_top = 16
custom_constants/margin_left = 16
custom_constants/margin_bottom = 16

[node name="OptionsButton" type="Button" parent="MarginContainer4"]
margin_left = 16.0
margin_top = 16.0
margin_right = 224.0
margin_bottom = 88.0
theme = ExtResource( 8 )
text = "Options"

[connection signal="song_selected" from="." to="MarginContainer2/VBoxContainer/PanelContainer/JacketImage" method="_on_SongSelect_song_selected"]
[connection signal="pressed" from="MarginContainer4/OptionsButton" to="." method="_on_OptionsButton_pressed"]
